<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overcast">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overcast"
        tools:context=".ui.detail.DetailActivity"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/titulo_Textview"
            style="@style/titulo_app"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/tituloApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombre_parque_textview"
            style="@style/Texto_titulo_parques"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/tayrona"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/titulo_Textview"
            app:layout_constraintTop_toBottomOf="@+id/titulo_Textview" />

        <ImageView
            android:id="@+id/parque_imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_parque_textview"
            app:srcCompat="@drawable/parquetayrona"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/ubicacion_textView"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ubicacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parque_imageView" />

        <TextView
            android:id="@+id/temperatura_textView"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/temperatura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion_textView" />

        <TextView
            android:id="@+id/descripcion_titulo_textView"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/descripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatura_textView" />

        <TextView
            android:id="@+id/ubicacion_contenido_textView"
            style="@style/Texto_subtitulo_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sierra_nevada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ubicacion_textView"
            app:layout_constraintTop_toBottomOf="@+id/parque_imageView" />

        <TextView
            android:id="@+id/temperatura_contenido_textView"
            style="@style/Texto_subtitulo_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/temperatura_valor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/temperatura_textView"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion_contenido_textView" />

        <TextView
            android:id="@+id/descripcion_contenido_textView"
            style="@style/Texto_subtitulo_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/descripcion_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_titulo_textView" />

        <TextView
            android:id="@+id/textView8"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sitios_interes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_contenido_textView" />

        <TextView
            android:id="@+id/sitios_contenido_textView"
            style="@style/Texto_subtitulo_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sitios_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sitios_contenido_textView" />

        <TextView
            android:id="@+id/textViewMap"
            style="@style/Texto_subtitulo_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:text="Ver en Google Maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mapButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>