<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foto_parque_imageView"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/chiribiquete"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/nombre_parque_textView"
                style="@style/Texto_titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/mist"
                android:text="@string/chiribiquete"
                android:textAlignment="center"
                android:textColor="@color/peacock_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foto_parque_imageView" />

            <TextView
                android:id="@+id/descripcion_textView"
                style="@style/Texto_descripcion"
                android:layout_width="391dp"
                android:layout_height="114dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/chiribiquete_descripcion"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre_parque_textView" />

            <TextView
                android:id="@+id/calificacion_textView"
                style="@style/Texto_puntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/puntuacion"
                android:textAlignment="textEnd"
                android:textColor="@color/ic_launcher_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/foto_parque_imageView"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="21dp"
                android:layout_height="19dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/foto_parque_imageView"
                app:layout_constraintEnd_toStartOf="@+id/calificacion_textView"
                app:srcCompat="@android:drawable/btn_star_big_on" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>